resolve some Assigment APi