@@ -13,10 +13,24 @@ import com.java.eONE.repository.UserRepository;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-
+import org.springframework.format.annotation.DateTimeFormat;
+import org.springframework.http.MediaType;
+import org.springframework.web.multipart.MultipartFile;
 import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
+
+import java.io.File;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.util.HashMap;
+import java.util.Map;
+import java.util.Optional;
 
 @RestController
 @CrossOrigin(origins = "*")
@@ -39,22 +53,46 @@ public class AssignmentController {
         this.userRepository = userRepository;
     }
 
-    @PostMapping
-    public ResponseEntity<?> createAssignment(@RequestBody AssignmentRequestDTO dto) {
+    @PostMapping(consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
+    public ResponseEntity<?> createAssignment(
+            @RequestParam("title") String title,
+            @RequestParam("description") String description,
+            @RequestParam("due_date") @DateTimeFormat(pattern = "yyyy-MM-dd") LocalDate dueDate,
+            @RequestParam("subject_id") Long subjectId,
+            @RequestParam("teacher_id") Long teacherId,
+            @RequestParam("file") MultipartFile file) {
+
         // Validate related entities
-        Optional<Subject> subjectOpt = subjectRepository.findById(dto.getSubjectId());
-        Optional<User> teacherOpt = userRepository.findById(dto.getTeacherId());
+        Optional<Subject> subjectOpt = subjectRepository.findById(subjectId);
+        Optional<User> teacherOpt = userRepository.findById(teacherId);
 
         if (subjectOpt.isEmpty() || teacherOpt.isEmpty()) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
                     .body(Map.of("error", "Invalid subject_id or teacher_id"));
         }
 
+        // Save file to uploads folder inside project
+        String uploadDir = "uploads"; // relative to project root
+        File directory = new File(uploadDir);
+        if (!directory.exists()) {
+            directory.mkdirs();
+        }
+
+        String fileName = System.currentTimeMillis() + "_" + file.getOriginalFilename();
+        Path filePath = Paths.get(uploadDir, fileName);
+        try {
+            Files.copy(file.getInputStream(), filePath, StandardCopyOption.REPLACE_EXISTING);
+        } catch (IOException e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(Map.of("error", "File upload failed"));
+        }
+
+        // Save assignment in DB
         Assignment assignment = new Assignment();
-        assignment.setTitle(dto.getTitle());
-        assignment.setDescription(dto.getDescription());
-        assignment.setDueDate(dto.getDueDate());
-        assignment.setFile(dto.getFile());
+        assignment.setTitle(title);
+        assignment.setDescription(description);
+        assignment.setDueDate(dueDate);
+        assignment.setFile(fileName); // store only filename
         assignment.setSubject(subjectOpt.get());
         assignment.setTeacher(teacherOpt.get());
         assignment.setCreatedAt(LocalDateTime.now());
@@ -62,6 +100,7 @@ public class AssignmentController {
 
         Assignment saved = assignmentRepository.save(assignment);
 
+        // Create notification
         Notification notification = new Notification();
         notification.setTeacher(teacherOpt.get());
         notification.setAssignment(saved);
@@ -70,46 +109,61 @@ public class AssignmentController {
         notification.setUpdatedAt(LocalDateTime.now());
         notificationRepository.save(notification);
 
-        AssignmentResponseDTO responseDTO = mapToResponseDTO(saved);
-
-        Map<String, Object> response = new HashMap<>();
-        response.put("message", "Assignment created successfully");
-        response.put("assignment", responseDTO);
-
-        return ResponseEntity.status(HttpStatus.CREATED).body(response);
+        return ResponseEntity.status(HttpStatus.CREATED)
+                .body(Map.of("message", "Assignment created successfully", "assignment", saved));
     }
 
+
     @GetMapping
-    public ResponseEntity<?> getAssignments(@RequestParam(required = false) Long teacher_id,
-                                            @RequestParam(required = false) Long student_id) {
+    public ResponseEntity<?> getAssignments(
+            @RequestParam(required = false) Long teacher_id,
+            @RequestParam(required = false) Long student_id) {
+
+        List<Assignment> assignments;
 
         if (teacher_id != null) {
-            List<Assignment> assignments = assignmentRepository.findByTeacherId(teacher_id);
-            List<AssignmentResponseDTO> dtos = assignments.stream()
-                    .map(this::mapToResponseDTO)
-                    .collect(Collectors.toList());
-            return ResponseEntity.ok(dtos);
-        } else if (student_id != null) {
+            assignments = assignmentRepository.findByTeacherId(teacher_id);
+        } 
+        else if (student_id != null) {
             Optional<User> studentOpt = userRepository.findById(student_id);
             if (studentOpt.isEmpty()) {
                 return ResponseEntity.status(HttpStatus.BAD_REQUEST)
                         .body(Map.of("error", "Invalid student_id"));
             }
+
             var classroom = studentOpt.get().getClassroom();
             if (classroom == null) {
                 return ResponseEntity.ok(Collections.emptyList());
             }
+
             List<Long> subjectIds = classroom.getSubjects().stream()
                     .map(sub -> sub.getId())
-                    .collect(Collectors.toList());
-            List<Assignment> assignments = assignmentRepository.findBySubjectIdIn(subjectIds);
-            List<AssignmentResponseDTO> dtos = assignments.stream()
-                    .map(this::mapToResponseDTO)
-                    .collect(Collectors.toList());
-            return ResponseEntity.ok(dtos);
+                    .toList();
+            assignments = assignmentRepository.findBySubjectIdIn(subjectIds);
+        } 
+        else {
+            return ResponseEntity.badRequest()
+                    .body(Map.of("error", "teacher_id or student_id parameter required"));
         }
-        return ResponseEntity.badRequest().body(Map.of("error", "teacher_id or student_id parameter required"));
+
+        // Convert Assignment -> Map<String, Object> for Flutter
+        List<Map<String, Object>> dtos = assignments.stream().map(a -> {
+            Map<String, Object> map = new HashMap<>();
+            map.put("id", a.getId());
+            map.put("title", a.getTitle());
+            map.put("description", a.getDescription());
+            map.put("due_date", a.getDueDate() != null ? a.getDueDate().toString() : null);
+            map.put("subject_id", a.getSubject() != null ? a.getSubject().getId() : null);
+            map.put("subject_name", a.getSubject() != null ? a.getSubject().getName() : null);
+            map.put("teacher_id", a.getTeacher() != null ? a.getTeacher().getId() : null);
+            map.put("teacher_name", a.getTeacher() != null ? a.getTeacher().getName() : null);
+            map.put("file_url", a.getFileUrl()); // Uses your getFileUrl() helper
+            return map;
+        }).toList();
+
+        return ResponseEntity.ok(dtos);
     }
+
 
     @GetMapping("/{id}/submissions")
     public ResponseEntity<?> getSubmissions(@PathVariable Long id) {
